# SLAM_VO

./: .gitignore  README.md  要求.docx
Base/: CMakeLists.txt  My_VO.cpp  My_VO.h  README.md  VO常见问题整理.md  VO程序详解.md  单目VO实现流程详解.md
Kitti/: README.md  camera-info.txt  gt-tum07.txt  说明.txt
experiments/: README.md
experiments/motion_modes/: README.md
experiments/motion_modes/01_static/: segments.csv
experiments/motion_modes/02_rotation_dominant/: segments.csv
experiments/motion_modes/03_low_translation/: segments.csv
experiments/motion_modes/04_nominal_translation/: segments.csv
experiments/motion_modes/05_fast_translation/: segments.csv
experiments/motion_modes/06_transition/: segments.csv
output/full_run/ape/: evo_ape_metrics.txt
output/full_run/position/: geometry_position.txt  position.txt
output/full_run/rpe/: evo_rpe_metrics.txt
output/full_run/traj/: evo_traj_table.csv
output/motion_modes/01_static/static_01/: segment.json
output/motion_modes/01_static/static_02/: segment.json
output/motion_modes/01_static/static_03/: segment.json
output/motion_modes/02_rotation_dominant/rotation_01/: segment.json
output/motion_modes/02_rotation_dominant/rotation_02/: segment.json
output/motion_modes/02_rotation_dominant/rotation_03/: segment.json
output/motion_modes/03_low_translation/low_translation_01/: segment.json
output/motion_modes/summary/: all_segments.csv  all_segments.md  mode_statistics.csv  mode_statistics.md  primary_segments.csv  primary_segments.md
scripts/: README.md  run_motion_mode.py  summarize_motion_modes.py
(+153 files in other folders)
